--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
+ 
+  background-image: url(bg.jpg);
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+background-size: cover;}
+
+.signup{
+  width: 12vw;
+
+}
+input{
+  width: 25vw;
+  height: 2vw;
+  margin: 0.3vw auto;
+
+}
+.login{
+  background-color:white;
+  margin: 0 auto;
+  width:30vw;
+  border-radius: 0.3vw;
   text-align: center;
+  padding: 2vw 0 2vw 0;
+  box-shadow: 0 0 10px #8aadc2;
+  margin-top: 5vw;
+  position: static;
+  top:50%;
+  bottom: 50%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+button{
+  width: 15vw;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button:hover{
+  border-color: rgb(55, 85, 255);
+}
+.logo1{
+  width: 8vw;
+}
+.signup::after{
+  color:rgb(55, 85, 255) ;
+  background-color: white;
+  border-color: transparent;
+}
+.signup{
+  background-color:rgb(55, 85, 255) ;
   color: white;
+  height: 2.7vw;
+  border: transparent;
+  border-radius: 0.3vw;
+  margin: 0.5vw auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width:768px){
+  .logo1{
+    width: 20vw;
+    margin: 7% 30% 25% 40%;
   }
-  to {
-    transform: rotate(360deg);
+  .login{
+    width: 70vw;
+    height: 40vh;
+  }
+  input{
+    display: block;
+    height: 5vh;
+    width: 60vw;
+    margin: 2vh auto ;
+  }
+  .signup{
+    width: 30vw;
+    height: 3vh;
+    border-radius: 1vw;
+  }
+  button{
+    width: 60vw;
+    height: 7vh;
   }
 }
